# Proekt_oop_2026

./: Building.cpp  Building.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Citizen.cpp  Citizen.hpp  CityMap.cpp  CityMap.hpp  CommandCenter.cpp  CommandCenter.hpp  Dorm.hpp  Enums.hpp  LICENSE  LogEntry.cpp  LogEntry.hpp  Miner.cpp  Miner.hpp  ModernBuilding.cpp  ModernBuilding.hpp  Panel.cpp  Panel.hpp  Profession.hpp  Programmer.cpp  Programmer.hpp  README.md  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  Unemployed.cpp  Unemployed.hpp  main.cpp
Buildings/: Building.cpp  Building.hpp  CentralLoc.cpp  CentralLoc.hpp  Dorm.cpp  Dorm.hpp  EndLoc.hpp  Location.hpp  ModernBuilding.hpp  StandartLoc.hpp
Core/: Cell.cpp  Cell.hpp  CityMap.cpp  CityMap.hpp  CommandCenter.cpp  CommandCenter.hpp
Entities/: Citizen.cpp  Citizen.hpp  LogEntry.cpp  LogEntry.hpp
Professions/: Miner.cpp  Miner.hpp  Profession.hpp  Programmer.cpp  Programmer.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  Unemployed.cpp  Unemployed.hpp
Utilities/: BinaryUtils.hpp  Enums.hpp
